--- a/style.css
+++ b/style.css
@@ -15,8 +15,11 @@
 }
 
 .logo-img{
-    width: 130px;
+    width: 150px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .menu{
@@ -69,6 +72,7 @@
 .btn{
     padding: 15px 30px;
     border: none;
+    border-radius: none;
     background-color: #FF0000;
     color: #fff;
     font-size: 16px;
@@ -79,6 +83,92 @@
 .btn:hover{
     background-color: #fff;
     color: #FF0000;
+    border-radius: none;
 }
 
 /* hero section end */
+
+/* about section start */
+#about-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.about-title{
+    font-size: 60px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.about-photo{
+    width: 400px;
+}
+
+.about-sub-title{
+    font-size: 30px;
+}
+.about-description{
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+/* about section end */
+
+/* card section start */
+
+.service-title{
+    font-size: 60px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 50px;
+}
+
+#service-container{
+    background-image: url("./images/background.png"), linear-gradient(45deg,#2e2d2d, #242222);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.box{
+    width: 250px;
+    height:300px;
+    box-shadow: 4px 4px 15px gray;
+    background-color: #000;
+    padding: 20px;
+    text-align: center;
+    margin: 40px;
+    color: #fff;
+}
+
+.box-title{
+    padding: 10px;
+}
+
+.box-icon{
+    width: 70px;
+}
+
+.box-description{
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.box-btn{
+    padding: 5px 10px;
+    border: none;
+    border-radius: none;
+    background-color: #fff;
+    color: #000;
+    font-size: 14px;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+
+.box-btn:hover{
+    background-color: #FF0000;
+    color: #fff;
+    border-radius: none;
+}
